opam-version: "2.0"
name: "lazyStream"
version: "1.0"
synopsis: "Data structure like Seq but more lazily evaluated"
description: """
lazyStream is like Seq and Stream but more lazily evaluated, though calling a
function with the same parameters multiple times will create different streams
and will be evaluated separately, and more provided functions
"""
maintainer: "Nikunj Chawla <nikchawla312@gmail.com>"
authors: "Nikunj Chawla <nikchawla312@gmail.com>"
homepage: "https://github.com/nik312123/lazyStream"
dev-repo: "git+https://github.com/nik312123/lazyStream.git"
bug-reports: "https://github.com/nik312123/lazyStream/issues"
doc: "https://nik312123.github.io/ocamlLibDocs/lazyStream/LazyStream/"
depends: [
    "ocaml" {>= "4.08.1"}
    "dune" {>= "2.7.1"}
    "base-bytes"
    "base-unix"
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
